--- a/Epam.UserAward/Epam.UserAward.Logic/Epam.UserAward.Logic.csproj
+++ b/Epam.UserAward/Epam.UserAward.Logic/Epam.UserAward.Logic.csproj
@@ -53,6 +53,10 @@
       <Project>{2726eca4-4389-4c6a-8586-6f1603d8c647}</Project>
       <Name>Epam.UserAward.Entities</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Epam.UserAward.FileDal\Epam.UserAward.FileDal.csproj">
+      <Project>{06603ED3-AC51-4965-8A30-747F8D6A3A74}</Project>
+      <Name>Epam.UserAward.FileDal</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Epam.UserAward.LogicContracts\Epam.UserAward.LogicContracts.csproj">
       <Project>{ef0fd23f-6f3d-4d5e-b03c-d0f1a72d8e7f}</Project>
       <Name>Epam.UserAward.LogicContracts</Name>
