--- a/Epam.UserAward/Epam.UserAward.MemoryDal/Epam.UserAward.MemoryDal.csproj
+++ b/Epam.UserAward/Epam.UserAward.MemoryDal/Epam.UserAward.MemoryDal.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MemoryNoteDao.cs" />
+    <Compile Include="MemoryUserDao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
