done with age calculate

--- a/Epam.UserAward/Epam.UserAward.ConsolePL/App.config
+++ b/Epam.UserAward/Epam.UserAward.ConsolePL/App.config
@@ -2,6 +2,7 @@
 <configuration>
   <appSettings>
     <add key ="FilePath" value ="C:\EpamSummerTrainee\user.txt"/>
+    <add key ="FilePathAward" value ="C:\EpamSummerTrainee\award.txt"/>
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
