--- a/Epam.UserAward/Epam.UserAward.FileDal/Epam.UserAward.FileDal.csproj
+++ b/Epam.UserAward/Epam.UserAward.FileDal/Epam.UserAward.FileDal.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileAwardDao.cs" />
     <Compile Include="FileUserDao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
